ported to 1.20.4, updated gradle